--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "heroku": "^7.33.3",
     "firebase": "^7.3.0",
     "firebase-admin": "^8.7.0"
   },
